--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Install prerequisites
+      run: sudo apt-get update && sudo apt-get install -y libasound2-dev libudev-dev
     - name: Build
       run: cargo build --verbose
     - name: Run tests
